WK2: VoiceOver cannot move focus into a web area programmatically https://bugs.webkit.org/show_bug.cgi?id=60661

Reviewed by Maciej Stachowiak.

Source/WebCore:

Accessibility code relies on the ability to bring focus to the containing widget view.
In WK2, that message needs to be propagated to the UI process.

* page/ChromeClient.h:
(WebCore::ChromeClient::makeFirstResponder):
* page/mac/ChromeMac.mm:
(WebCore::Chrome::focusNSView):
* platform/mac/WidgetMac.mm:
(WebCore::Widget::setFocus):

Source/WebKit2:

Add a makeFirstResponder method that will bring focus to the widget view within the UI
process.

* UIProcess/API/mac/PageClientImpl.h:
* UIProcess/API/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::makeFirstResponder):
* UIProcess/PageClient.h:
* UIProcess/WebPageProxy.h:
* UIProcess/WebPageProxy.messages.in:
* UIProcess/mac/WebPageProxyMac.mm:
(WebKit::WebPageProxy::makeFirstResponder):
* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::makeFirstResponder):
* WebProcess/WebCoreSupport/WebChromeClient.h:



Canonical link: https://commits.webkit.org/76448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86806 268f45cc-cd09-0410-ab3c-d52691b4dbfc