Source/WebCore/page/ChromeClient.h
@@ -286,7 +286,8 @@ namespace WebCore {
 #if PLATFORM(MAC)
         virtual NSResponder *firstResponder() { return 0; }
         virtual void makeFirstResponder(NSResponder *) { }
-
+        // Focuses on the containing view associated with this page.
+        virtual void makeFirstResponder() { }
         virtual void willPopUpMenu(NSMenu *) { }
 #endif
 
