third_party/WebKit/Source/WebKit2/UIProcess/API/mac/PageClientImpl.mm
@@ -165,6 +165,11 @@ bool PageClientImpl::isViewFocused()
     return [m_wkView _isFocused];
 }
 
+void PageClientImpl::makeFirstResponder()
+{
+     [[m_wkView window] makeFirstResponder:m_wkView];
+}
+    
 bool PageClientImpl::isViewVisible()
 {
     if (![m_wkView window])
